...
        <android.support.v7.widget.CardView
            android:id="@+id/destination_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressInput"
                style="@style/RATextView.MontserratLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/autocomplete_height"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:clickable="true"
...
                android:textColor="@android:color/black"
                android:textSize="@dimen/regular_text_size"
                tools:drawableLeft="@drawable/ic_green"
                tools:hint="@string/enter_pickup_address"/>

            <ImageView
                android:id="@+id/clearButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_close_small"
                android:tint="@color/light_icon_tint"
                android:layout_gravity="right|center_vertical"/>

        </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/list_item_divider"
            android:dividerHeight="0.1dp"
            tools:listitem="@layout/view_address_selection_item" />

...
